--- a/style.css
+++ b/style.css
@@ -222,3 +222,62 @@ textarea {
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
+input[type=checkbox] {
+    visibility: hidden;
+}
+
+.check-box {
+    width: 120px;
+    height: 40px;
+    background: #333;
+    margin: 20px 60px;
+
+    border-radius: 50px;
+    position: relative;
+    font-family: sans-serif;
+}
+
+.check-box:before {
+    content: 'On';
+    position: absolute;
+    top: 12px;
+    left: 13px;
+    height: 2px;
+    color: #26ca28;
+    font-size: 16px;
+}
+
+.check-box:after {
+    content: 'Off';
+    position: absolute;
+    top: 12px;
+    left: 84px;
+    height: 2px;
+    color: #111;
+    font-size: 16px;
+}
+
+.check-box label {
+    display: block;
+    width: 52px;
+    height: 22px;
+    border-radius: 50px;
+
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    transition: all .5s ease;
+    cursor: pointer;
+    position: absolute;
+    top: 9px;
+    z-index: 1;
+    left: 12px;
+    background: #ddd;
+}
+
+.check-box input[type=checkbox]:checked + label {
+    left: 60px;
+    background: #26ca28;
+}
