--- a/style.css
+++ b/style.css
@@ -230,12 +230,12 @@ input[type=checkbox] {
 .check-box {
     width: 120px;
     height: 40px;
-    background: #333;
+    background: #ecf0f1;
     margin: 20px 60px;
 
     border-radius: 50px;
     position: relative;
-    font-family: sans-serif;
+    font-size: sans-serif;
 }
 
 .check-box:before {
@@ -244,7 +244,7 @@ input[type=checkbox] {
     top: 12px;
     left: 13px;
     height: 2px;
-    color: #26ca28;
+    color: #2980b9;
     font-size: 16px;
 }
 
@@ -254,7 +254,7 @@ input[type=checkbox] {
     top: 12px;
     left: 84px;
     height: 2px;
-    color: #111;
+    color: #e74c3c;
     font-size: 16px;
 }
 
@@ -274,10 +274,10 @@ input[type=checkbox] {
     top: 9px;
     z-index: 1;
     left: 12px;
-    background: #ddd;
+    background: #707070;
 }
 
 .check-box input[type=checkbox]:checked + label {
     left: 60px;
-    background: #26ca28;
+    background: #3498db;
 }
