--- a/style.css
+++ b/style.css
@@ -227,6 +227,10 @@ input[type=checkbox] {
     visibility: hidden;
 }
 
+.option-label {
+    float: left;
+}
+
 .check-box {
     width: 120px;
     height: 40px;
@@ -234,6 +238,7 @@ input[type=checkbox] {
     margin: 20px 60px;
     border-radius: 50px;
     position: relative;
+    float: left;
 }
 
 .check-box:before {
