--- a/style.css
+++ b/style.css
@@ -230,6 +230,10 @@ input[type=checkbox] {
 .option-label {
     float: left;
     font-size: 16pt;
+    padding-top: 4px;
+    width: 280px;
+    height: 40px;
+    top: 5px;
 }
 
 .check-box {
