changed well font color to black

--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ input[type=checkbox] {
 
 .wellitem {
   margin: 4px 0;
-  color: #ecf0f1;
+  color: black;
   font-size: 15pt;
   padding: 0px 5px;
   -webkit-border-radius: 5px;
