Combined modification labels with option generators and filters. It's kind of a messy trade-off, but one that I hope pays off.

--- a/style.css
+++ b/style.css
@@ -167,6 +167,10 @@ body {
     font-size: 16pt;
 }
 
+#part {
+  margin-right: 16px;
+}
+
 .flash {
   -moz-animation: flash 0.5s ease-out;
   -moz-animation-iteration-count: 1;
